# bibtag

./: .gitignore  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  README  README.md  bibtag.c  bibtag.man  configure.ac
.github/workflows/: codeql-analysis.yml
